--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
 
-    A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-    named for its historical crescent shape. Croissants and other viennoiserie
-    are made of a layered yeast-leavened dough
+    <p>
+      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
+    </p>
+
+    <br />
 
     <a href="index.html">Homepage</a>
     <a href="photo.html">Photo</a>
