--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
 
-    To contact croissant.com, please email us at hello@croissant.com for more
-    info
+    <p>
+      To contact croissant.com, please email us at hello@croissant.com for more
+      info
+    </p>
 
+    <br />
     <a href="index.html">Homepage</a>
     <a href="photo.html">Photo</a>
     <a href="contact.html">Contact</a>
